Make the most perfect abstraction of a parser to ever exist

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,10 @@
       <artifactId>tpe2-g7-api</artifactId>
       <version>2024.1Q</version>
     </dependency>
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast-all</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <testSourceDirectory>src/test/java</testSourceDirectory>
