--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <mockito.version>4.11.0</mockito.version>
     <junit5.version>5.9.1</junit5.version>
     <hazelcast.version>3.6.5</hazelcast.version>
+    <commons-cli.version>1.8.0</commons-cli.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -75,6 +76,11 @@
         <version>${junit5.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>${commons-cli.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
