Make server initializable by script and fix parser

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,6 +29,12 @@
       <artifactId>annotations-api</artifactId>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.32</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
   <build>
     <extensions>
