--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,6 +19,16 @@
       <groupId>com.hazelcast</groupId>
       <artifactId>hazelcast-all</artifactId>
     </dependency>
+      <dependency>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+      </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.32</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <testSourceDirectory>src/test/java</testSourceDirectory>
