Make first effort to achieve map reduce for query 1

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -35,6 +35,10 @@
           <version>1.18.32</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>com.hazelcast</groupId>
+          <artifactId>hazelcast-all</artifactId>
+      </dependency>
   </dependencies>
   <build>
     <extensions>
