--- a/client/pom.xml
+++ b/client/pom.xml
@@ -24,11 +24,21 @@
       <artifactId>commons-cli</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.univocity</groupId>
+      <artifactId>univocity-parsers</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.32</version>
       <scope>provided</scope>
     </dependency>
+
   </dependencies>
   <build>
     <testSourceDirectory>src/test/java</testSourceDirectory>
